# AstroBarrier

./: .gitignore  Makefile.am  configure.ac
data/: Makefile.am
data/desktop/: astro.desktop
data/levels/official/: astro_nivel_10.astro  astro_nivel_11.astro  astro_nivel_15.astro  astro_nivel_17.astro  astro_nivel_18.astro  astro_nivel_19.astro  astro_nivel_2.astro  astro_nivel_20.astro  astro_nivel_21.astro  astro_nivel_23.astro  astro_nivel_24.astro  astro_nivel_25.astro  astro_nivel_27.astro  astro_nivel_3.astro  astro_nivel_30.astro  astro_nivel_33.astro  astro_nivel_34.astro  astro_nivel_35.astro  astro_nivel_37.astro  astro_nivel_40.astro  astro_nivel_6.astro  astro_nivel_7.astro  astro_nivel_8.astro  astro_nivel_9.astro  astro_nivel_e-11.astro  astro_nivel_e-16.astro  astro_nivel_e-30.astro  astro_nivel_e-7.astro  astro_nivel_s-1_1.astro  astro_nivel_s-1_10.astro  astro_nivel_s-1_2.astro  astro_nivel_s-1_4.astro  astro_nivel_s-1_5.astro  astro_nivel_s-1_6.astro  astro_nivel_s-1_9.astro  astro_nivel_s-2_1.astro  astro_nivel_s-2_10.astro  astro_nivel_s-2_3.astro  astro_nivel_s-2_5.astro  astro_nivel_s-2_6.astro  (+2 more)
po/: ChangeLog  Makevars  POTFILES.in  POTFILES_lua.in  Rules-update-pot  astro-barrier.pot  es.po
src/: Estructura del archivo de niveles  Makefile.am  astro-lua.c  astro-lua.h  astro-types.h  astro-write-level-file.c  astro.c  astro.rc  astro_images.h  draw-text.c  draw-text.h  niveles-astro-oficial  util-bresenham.c  util-bresenham.h
src/levels/: astro_nivel_1.astro  astro_nivel_10.astro  astro_nivel_11.astro  astro_nivel_12.astro  astro_nivel_13.astro  astro_nivel_14.astro  astro_nivel_15.astro  astro_nivel_16.astro  astro_nivel_20.astro  astro_nivel_21.astro  astro_nivel_22.astro  astro_nivel_23.astro  astro_nivel_26.astro  astro_nivel_28.astro  astro_nivel_29.astro  astro_nivel_30.astro  astro_nivel_31.astro  astro_nivel_32.astro  astro_nivel_36.astro  astro_nivel_38.astro  astro_nivel_39.astro  astro_nivel_4.astro  astro_nivel_5.astro  astro_nivel_6.astro  astro_nivel_7.astro  astro_nivel_9.astro  astro_nivel_e-11.astro  astro_nivel_e-16.astro  astro_nivel_e-30.astro  astro_nivel_e-7.astro  astro_nivel_s-1_1.astro  astro_nivel_s-1_10.astro  astro_nivel_s-1_3.astro  astro_nivel_s-1_4.astro  astro_nivel_s-1_5.astro  astro_nivel_s-1_6.astro  astro_nivel_s-1_7.astro  astro_nivel_s-1_8.astro  astro_nivel_s-1_9.astro  astro_nivel_s-2_1.astro  (+6 more)
