gamedatadir = $(pkgdatadir)/data

nobase_dist_gamedata_DATA = images/arcade.png \
	images/astro.png \
	images/block_normal.png \
	images/block_mini.png \
	images/block_big.png \
	images/block_tall.png \
	images/block_orange.png \
	images/frame.png \
	images/gamearea.png \
	images/gameintro.png \
	images/shoot.png \
	images/target_big_blue.png \
	images/target_big_green.png \
	images/target_big_red.png \
	images/target_big_yellow.png \
	images/target_mini_blue.png \
	images/target_mini_green.png \
	images/target_mini_red.png \
	images/target_mini_yellow.png \
	images/target_normal_blue.png \
	images/target_normal_green.png \
	images/target_normal_red.png \
	images/target_normal_yellow.png \
	images/line1.png \
	images/line2a.png \
	images/line2b.png \
	images/line3.png \
	images/line4.png \
	images/line5.png \
	images/line6a.png \
	images/line6b.png \
	images/line6c.png \
	images/line7.png \
	images/line8.png \
	images/line9.png \
	images/line10.png \
	images/line11a.png \
	images/line11b.png \
	images/line12.png \
	images/line13.png \
	images/line14.png \
	images/line15.png \
	images/switch_orange.png \
	images/switch_orange_hit.png \
	images/restart.png \
	images/next_level.png

