gamedatadir = $(pkgdatadir)/data

nobase_dist_gamedata_DATA = images/arcade.png \
	images/astro.png \
	images/astro_logo.png \
	images/boton-close-down.png \
	images/boton-close-over.png \
	images/boton-close-up.png \
	images/button-start.png \
	images/astro_destroyed.png \
	images/astro_blue.png \
	images/block_normal.png \
	images/block_mini.png \
	images/block_big.png \
	images/block_tall.png \
	images/block_orange.png \
	images/block_orange_mini.png \
	images/frame.png \
	images/gamearea.png \
	images/gameintro.png \
	images/shoot.png \
	images/target_big_blue.png \
	images/target_big_green.png \
	images/target_big_red.png \
	images/target_big_yellow.png \
	images/target_mini_blue.png \
	images/target_mini_green.png \
	images/target_mini_red.png \
	images/target_mini_yellow.png \
	images/target_normal_blue.png \
	images/target_normal_green.png \
	images/target_normal_red.png \
	images/target_normal_yellow.png \
	images/target_mini_lightgreen.png \
	images/target_mini_orange.png \
	images/target_expand1.png \
	images/target_expand2.png \
	images/target_expand3.png \
	images/target_expand4.png \
	images/target_expand5.png \
	images/target_expand_red.png \
	images/target_500_green.png \
	images/target_500_red.png \
	images/line1.png \
	images/line2a.png \
	images/line2b.png \
	images/line3.png \
	images/line4a.png \
	images/line4b.png \
	images/line5.png \
	images/line6a.png \
	images/line6b.png \
	images/line6c.png \
	images/line7.png \
	images/line8.png \
	images/line9.png \
	images/line10.png \
	images/line11a.png \
	images/line11b.png \
	images/line12a.png \
	images/line12b.png \
	images/line13.png \
	images/line14.png \
	images/line15.png \
	images/line16a.png \
	images/line16b.png \
	images/line17.png \
	images/line18a.png \
	images/line18b.png \
	images/line18c.png \
	images/line18d.png \
	images/line19a.png \
	images/line19b.png \
	images/line19c.png \
	images/line19d.png \
	images/line20.png \
	images/line21.png \
	images/line22a.png \
	images/line22b.png \
	images/line23a.png \
	images/line23b.png \
	images/line24.png \
	images/line25a.png \
	images/line25b.png \
	images/line26a.png \
	images/line26b.png \
	images/line27.png \
	images/line28.png \
	images/line29.png \
	images/line30.png \
	images/line31.png \
	images/switch_orange.png \
	images/switch_orange_hit.png \
	images/turret1.png \
	images/turret2.png \
	images/turret3.png \
	images/turret4.png \
	images/turret_destroyed.png \
	images/turret_shoot1.png \
	images/turret_shoot2.png \
	images/turret_shoot3.png \
	images/turret_shoot4.png \
	images/restart.png \
	images/next_level.png \
	levels/official/* \
	burbanksb.ttf

