gamedatadir = $(pkgdatadir)/data

nobase_dist_gamedata_DATA = images/arcade.png \
	images/astro.png \
	images/astro_logo.png \
	images/icon.png \
	images/boton-close-down.png \
	images/boton-close-over.png \
	images/boton-close-up.png \
	images/button-start.png \
	images/astro_destroyed.png \
	images/astro_blue.png \
	images/block_normal.png \
	images/block_mini.png \
	images/block_big.png \
	images/block_tall.png \
	images/block_orange.png \
	images/block_orange_mini.png \
	images/frame.png \
	images/gamearea.png \
	images/gameintro.png \
	images/shoot.png \
	images/target_big_blue.png \
	images/target_big_green.png \
	images/target_big_red.png \
	images/target_big_yellow.png \
	images/target_mini_blue.png \
	images/target_mini_green.png \
	images/target_mini_red.png \
	images/target_mini_yellow.png \
	images/target_normal_blue.png \
	images/target_normal_green.png \
	images/target_normal_red.png \
	images/target_normal_yellow.png \
	images/target_mini_lightgreen.png \
	images/target_mini_orange.png \
	images/target_expand1.png \
	images/target_expand2.png \
	images/target_expand3.png \
	images/target_expand4.png \
	images/target_expand5.png \
	images/target_expand_red.png \
	images/target_500_green.png \
	images/target_500_red.png \
	images/line1.png \
	images/line2a.png \
	images/line2b.png \
	images/line3.png \
	images/line4a.png \
	images/line4b.png \
	images/line5.png \
	images/line6a.png \
	images/line6b.png \
	images/line6c.png \
	images/line7.png \
	images/line8.png \
	images/line9.png \
	images/line10.png \
	images/line11a.png \
	images/line11b.png \
	images/line12a.png \
	images/line12b.png \
	images/line13.png \
	images/line14.png \
	images/line15.png \
	images/line16a.png \
	images/line16b.png \
	images/line17.png \
	images/line18a.png \
	images/line18b.png \
	images/line18c.png \
	images/line18d.png \
	images/line19a.png \
	images/line19b.png \
	images/line19c.png \
	images/line19d.png \
	images/line20.png \
	images/line21.png \
	images/line22a.png \
	images/line22b.png \
	images/line23a.png \
	images/line23b.png \
	images/line24.png \
	images/line25a.png \
	images/line25b.png \
	images/line26a.png \
	images/line26b.png \
	images/line27.png \
	images/line28.png \
	images/line29.png \
	images/line30.png \
	images/line31.png \
	images/switch_orange.png \
	images/switch_orange_hit.png \
	images/turret1.png \
	images/turret2.png \
	images/turret3.png \
	images/turret4.png \
	images/turret_destroyed.png \
	images/turret_shoot1.png \
	images/turret_shoot2.png \
	images/turret_shoot3.png \
	images/turret_shoot4.png \
	images/restart.png \
	images/next_level.png \
	images/stamps/51.png \
	images/stamps/52.png \
	images/stamps/53.png \
	images/stamps/54.png \
	images/stamps/55.png \
	images/stamps/56.png \
	images/stamps/57.png \
	images/stamps/58.png \
	images/stamps/59.png \
	images/stamps/60.png \
	images/stamps/61.png \
	images/stamps/62.png \
	levels/official/astro_nivel_1.astro \
	levels/official/astro_nivel_2.astro \
	levels/official/astro_nivel_3.astro \
	levels/official/astro_nivel_4.astro \
	levels/official/astro_nivel_5.astro \
	levels/official/astro_nivel_6.astro \
	levels/official/astro_nivel_7.astro \
	levels/official/astro_nivel_8.astro \
	levels/official/astro_nivel_9.astro \
	levels/official/astro_nivel_10.astro \
	levels/official/astro_nivel_11.astro \
	levels/official/astro_nivel_12.astro \
	levels/official/astro_nivel_13.astro \
	levels/official/astro_nivel_14.astro \
	levels/official/astro_nivel_15.astro \
	levels/official/astro_nivel_16.astro \
	levels/official/astro_nivel_17.astro \
	levels/official/astro_nivel_18.astro \
	levels/official/astro_nivel_19.astro \
	levels/official/astro_nivel_20.astro \
	levels/official/astro_nivel_21.astro \
	levels/official/astro_nivel_22.astro \
	levels/official/astro_nivel_23.astro \
	levels/official/astro_nivel_24.astro \
	levels/official/astro_nivel_25.astro \
	levels/official/astro_nivel_26.astro \
	levels/official/astro_nivel_27.astro \
	levels/official/astro_nivel_28.astro \
	levels/official/astro_nivel_29.astro \
	levels/official/astro_nivel_30.astro \
	levels/official/astro_nivel_31.astro \
	levels/official/astro_nivel_32.astro \
	levels/official/astro_nivel_33.astro \
	levels/official/astro_nivel_34.astro \
	levels/official/astro_nivel_35.astro \
	levels/official/astro_nivel_36.astro \
	levels/official/astro_nivel_37.astro \
	levels/official/astro_nivel_38.astro \
	levels/official/astro_nivel_39.astro \
	levels/official/astro_nivel_40.astro \
	levels/official/astro_nivel_e-7.astro \
	levels/official/astro_nivel_e-11.astro \
	levels/official/astro_nivel_e-16.astro \
	levels/official/astro_nivel_e-30.astro \
	levels/official/astro_nivel_s-1_1.astro \
	levels/official/astro_nivel_s-1_2.astro \
	levels/official/astro_nivel_s-1_3.astro \
	levels/official/astro_nivel_s-1_4.astro \
	levels/official/astro_nivel_s-1_5.astro \
	levels/official/astro_nivel_s-1_6.astro \
	levels/official/astro_nivel_s-1_7.astro \
	levels/official/astro_nivel_s-1_8.astro \
	levels/official/astro_nivel_s-1_9.astro \
	levels/official/astro_nivel_s-1_10.astro \
	levels/official/astro_nivel_s-2_1.astro \
	levels/official/astro_nivel_s-2_2.astro \
	levels/official/astro_nivel_s-2_3.astro \
	levels/official/astro_nivel_s-2_4.astro \
	levels/official/astro_nivel_s-2_5.astro \
	levels/official/astro_nivel_s-2_6.astro \
	levels/official/astro_nivel_s-2_7.astro \
	levels/official/astro_nivel_s-2_8.astro \
	levels/official/astro_nivel_s-2_9.astro \
	levels/official/astro_nivel_s-2_10.astro \
	sounds/barrier_hit.wav \
	sounds/game_over.wav \
	sounds/level_done.wav \
	sounds/oneup.wav \
	sounds/orange_switch.wav \
	sounds/shoot.wav \
	sounds/slide.wav \
	sounds/start_game.wav \
	sounds/turret_splode.wav \
	sounds/gun_splode.wav \
	sounds/win.wav \
	sounds/yellow_hit.wav \
	burbanksb.ttf

# Instalar los archivos .desktop e iconos
applicationsdir = $(datadir)/applications
applications_DATA = desktop/astro.desktop

icons24dir = $(datadir)/icons/hicolor/24x24/apps
icons24_DATA = desktop/24x24/astro-barrier.png

icons32dir = $(datadir)/icons/hicolor/32x32/apps
icons32_DATA = desktop/32x32/astro-barrier.png

icons48dir = $(datadir)/icons/hicolor/48x48/apps
icons48_DATA = desktop/48x48/astro-barrier.png

icons64dir = $(datadir)/icons/hicolor/64x64/apps
icons64_DATA = desktop/64x64/astro-barrier.png

icons128dir = $(datadir)/icons/hicolor/128x128/apps
icons128_DATA = desktop/128x128/astro-barrier.png

icons256dir = $(datadir)/icons/hicolor/256x256/apps
icons256_DATA = desktop/256x256/astro-barrier.png

# touch the toplevel icon directory as required by the icon theme spec
install-data-hook:
	touch $(DESTDIR)$(datadir)/icons/hicolor

EXTRA_DIST = \
	desktop/astro.desktop	\
	desktop/24x24/astro-barrier.png		\
	desktop/32x32/astro-barrier.png		\
	desktop/48x48/astro-barrier.png		\
	desktop/64x64/astro-barrier.png		\
	desktop/128x128/astro-barrier.png		\
	desktop/256x256/astro-barrier.png
